Update validate required option for Create Product Variant API